<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@color/ColorAccInfoBg"
    tools:context="com.example.games4all.DisplayInfo"
    android:stretchColumns="1"
    >

    <!-- TODO: Update blank fragment layout -->

    <TableRow>

        <TextView
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_column="1"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            />

        <TextView
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="604-500-9348"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </TableRow>

    <TableRow>
        <TextView
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_column="1"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="csis3375@hotmail.com"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </TableRow>

    <!--<TableRow>-->
        <!--<TextView-->
            <!--android:paddingRight="5dp"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:paddingBottom="5dp"-->
            <!--android:paddingTop="5dp"-->
            <!--android:layout_column="1"-->
            <!--android:id="@+id/textView6"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/country_province"-->
            <!--android:textSize="16sp" />-->

        <!--<TextView-->
            <!--android:paddingRight="5dp"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:paddingBottom="5dp"-->
            <!--android:paddingTop="5dp"-->
            <!--android:id="@+id/countryProvince_tv"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Canada/BC"-->
            <!--android:textSize="16sp"-->
            <!--/>-->
    <!--</TableRow>-->
    <TableRow>
        <TextView
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_column="1"
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Westminster"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            />
    </TableRow>
</TableLayout>