<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.games4all.SellGame"
    android:background="@color/colorPrimary">

    <include
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        />

    <EditText
        android:id="@+id/et_game_name"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/game_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameImage"
        app:layout_constraintTop_toBottomOf="@+id/tv_addInfoTitle" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/price_of_gme"
        android:inputType="textPersonName|numberDecimal"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameImage"
        app:layout_constraintTop_toBottomOf="@+id/et_game_name"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/et_aditionalInfo"
        android:layout_width="262dp"
        android:layout_height="124dp"
        android:layout_marginTop="20dp"
        android:background="@color/ColorAccInfoBg"
        android:elevation="3dp"
        android:ems="10"
        android:hint="@string/moreDetails"
        android:inputType="textMultiLine"
        android:lines="10"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consoleSpiner" />

    <Button
        android:id="@+id/PostGameBtn"
        android:layout_width="93dp"
        android:layout_height="50dp"
        android:elevation="6dp"
        android:onClick="AddGameButton"
        android:text="Post Game"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_aditionalInfo"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/tv_addInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="Add your game info"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/consoleSpiner"
        android:layout_width="220dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:elevation="3dp"
        android:entries="@array/consoleType"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameImage" />

    <ImageView
        android:id="@+id/gameImage"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_add_photo"
        />

</android.support.constraint.ConstraintLayout>
